// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`takes snapshot of state changes 1`] = `
<div
  className="container-fluid"
>
  <center>
    <h2>
      Guests
    </h2>
  </center>
  <div
    className="container"
  >
    <div>
      <input
        onChange={[Function]}
        placeholder="Enter guest name"
        type="text"
      />
      <button
        color="primary"
        onClick={[Function]}
      >
        Send Guest
      </button>
    </div>
  </div>
</div>
`;

exports[`takes snapshot of state changes 2`] = `
<div
  className="container-fluid"
>
  <center>
    <h2>
      Guests
    </h2>
  </center>
  <div
    className="container"
  >
    <div>
      <p>
        My new guest is 
        bar
      </p>
      <input
        onChange={[Function]}
        placeholder="Enter guest name"
        type="text"
      />
      <button
        color="primary"
        onClick={[Function]}
      >
        Send Guest
      </button>
    </div>
  </div>
</div>
`;
